# manuelfjr.github.io

./: .gitignore  Gemfile  README.md  _config.yml  index.html  pyproject.toml
_data/: navigation.yml
_includes/: author-profile.html  masthead.html  scripts.html
_layouts/: default.html  home.html  posts.html  single.html
_pages/: 404.md  publications.md  resume.md  terms.md  year-archive.md
_posts/: .2021-04-08-post-birt-sgd.md  2021-04-01-post-birt-sgd.md  2021-04-01-post-curriculum.md  2021-04-01-post-extras.md  2021-04-01-post-terms.md  2021-04-02-post-about-me.md  2021-04-02-post-design-implemetation-irt.md  2021-04-02-post-mentoring-program.md  2021-04-03-post-about-me.md  2021-04-03-post-database-to-fit-irt.md  2021-04-03-post-mentoring-program.md  2021-04-04-post-about-me.md  2021-04-04-post-birt-sgd.md  2021-04-04-post-cicc-pb.md  2021-04-04-post-database-to-fit-irt.md  2021-04-04-post-design-implemetation-irt.md  2021-04-04-post-extras.md  2021-04-04-post-mentoring-program.md  2021-04-04-post-tail-league.md  2021-04-05-post-about-me.md  2021-04-05-post-cicc-pb.md  2021-04-06-post-database-to-fit-irt.md  2021-04-06-post-tail-league.md  2021-04-07-post-design-implemetation-irt.md  2021-04-07-post-mentoring-program.md  2021-04-08-post-birt-gd.md  2021-04-08-post-birt-sgd.md  2021-04-08-post-extras.md  2021-09-01-post-appsdebolso.md  2021-10-01-post-semprocesso.md  2021-12-01-post-iriscv.md  2022-02-19-curriculum.md  2022-02-19-post-birt-gd.md  2022-05-31-post-semprocesso-new-job.md  2022-09-26-post-kunumi.md  2025-10-01-post-claire.md  (+1 more)
assets/css/: main.scss
(+12 files in other folders)
